<resources>
    <string name="app_name">LibMANA</string>
    <string name="username">Tên đăng nhập</string>
    <string name="password">Mật khẩu</string>
    <string name="re_password">Nhập lại mật khẩu</string>
    <string name="display_name">Tên hiển thị</string>
    <string name="remember_password">Nhớ mật khẩu</string>
    <string name="sign_in">Đăng nhập</string>
    <string name="sign_out">Đăng xuất</string>
    <string name="call_card_management">Quản lý phiếu mượn</string>
    <string name="book_management">Quản lý sách</string>
    <string name="genre_management">Quản lý thể loại sách</string>
    <string name="customer_management">Quản lý thành viên</string>
    <string name="analytics">Thống kê</string>
    <string name="top_10_best_seller">10 sách có doanh thu cao nhất</string>
    <string name="income">Doanh thu</string>
    <string name="librarian_list">Danh sách thủ thư</string>
    <string name="edit_information">Chỉnh sửa thông tin</string>
    <string name="user">Người dùng</string>
    <string name="name">Tên</string>
    <string name="genre">Thể loại</string>
    <string name="price">Giá</string>
    <string name="customer_name">Tên khách hàng</string>
    <string name="phone_number">Số điện thoại</string>
    <string name="address">Địa chỉ</string>
    <string name="ID">Mã</string>
    <string name="book_name">Tên sách</string>
    <string name="librarian_name">Tên thủ thư</string>
    <string name="returned">Đã trả</string>
    <string name="not_returned">Chưa trả</string>
    <string name="add_new_genre">Thêm thể loại mới</string>
    <string name="cancel">Huỷ</string>
    <string name="add">Thêm</string>
    <string name="you_must_enter_all_information">Bạn phải nhập đủ thông tin!</string>
    <string name="add_successful">Thêm mới thành công!</string>
    <string name="add_failed">Thêm mới thất bại! Có thể tên này đã có trong danh sách!</string>
    <string name="remove_successful">Xoá thành công!</string>
    <string name="remove_failed">Xoá thất bại!</string>
    <string name="edit">Chỉnh sửa</string>
    <string name="delete">Xoá</string>
    <string name="confirm_delete">Bạn có chăc muốn xóa?</string>
    <string name="edit_successfull">Chỉnh sửa thành công!</string>
    <string name="edit_failed">Chỉnh sửa thất bại!</string>
    <string name="add_new_customer">Thêm khách hàng mới</string>
    <string name="add_book">Thêm sách</string>
    <string name="edit_book">Sửa sách</string>
    <string name="time">Thời gian</string>
    <string name="add_call_card">Thêm phiếu mượn mới</string>
    <string name="information">Thông tin</string>
    <string name="login_name">Tên đăng nhập</string>
    <string name="add_librarian">Thêm thủ thư</string>
    <string name="invalid_username_or_password">Sai tên đăng nhập hoặc mật khẩu!</string>
    <string name="hello">Xin chào</string>
    <string name="from_day">Từ ngày</string>
    <string name="to_day">Đến ngày</string>
    <string name="from_day_must_before_to_day">Ngày bắt đầu phải trước ngày kết thúc!</string>
    <string name="total_income">Tổng doanh thu</string>
    <string name="current_password">Mật khẩu hiện tại</string>
    <string name="new_password">Mật khẩu mới</string>
    <string name="re_new_password">Nhập lại mật khẩu mới</string>
    <string name="change">Thay đổi</string>
    <string name="password_must_be_the_same">Mật khẩu không khớp!</string>
    <string name="wrong_password">`Sai mật khẩu hiện tại!</string>
    <string name="change_information_successfully">Thay đổi thông tin thành công! Xin vui lòng đăng nhập lại!</string>
    <string name="empty_list">Danh sách trống!</string>

    



    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>