<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="8dp">

    <TextView
        android:id="@+id/txt_call_card_dialog_customer"
        android:text="@string/customer_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Spinner
        android:id="@+id/spinner_edit_call_card_customer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_call_card_dialog_customer" />


    <TextView
        android:layout_marginTop="8dp"
        android:id="@+id/txt_call_card_dialog_book"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinner_edit_call_card_customer"
        android:text="@string/book_name" />

    <Spinner
        android:id="@+id/spinner_edit_call_card_book_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_call_card_dialog_book"
        android:autofillHints="creditCardExpirationDay" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edt_layout_edit_call_card_time"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinner_edit_call_card_book_name"
        android:layout_marginTop="8dp"
        android:hint="@string/time"
        app:endIconDrawable="@drawable/ic_baseline_calendar_today_24"
        app:endIconMode="custom">

        <com.google.android.material.textfield.TextInputEditText
            android:editable="false"
            android:id="@+id/edt_edit_call_card_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>



    <LinearLayout
        android:layout_below="@+id/edt_layout_edit_call_card_time"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/chk_is_book_returned"
            android:layout_marginStart="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:text="@string/returned"
            android:layout_marginStart="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</RelativeLayout>